# prescient-llm-hackathon

./: .gitignore  README.md  app.py  pyproject.toml  requirements.in
src/multimodal_llm/: main.py  requirements.txt
src/multimodal_llm/config/: config.yaml
src/multimodal_llm/configs/: config.yaml
src/multimodal_llm/data/: scicap.py
src/multimodal_llm/data/dataloaders/: scicap.py
src/multimodal_llm/model/: config.py  convert_from_hf_hahaha.py  fused_rotary_embedding.py  model.py  tokenizer.py
src/multimodal_llm/pl_modules/: pl_module.py
tests/src/multimodal_llm/data/dataloaders/: test_scicap.py
