[project]
name = "multimodal_llm"
dynamic = ["version", "readme", "dependencies", ]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=68.0.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"prescient.metrics.functional._naturalness" = ["antiberty_tokenizer/*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.in"]}
readme = {file = "README.md"}

[tool.setuptools_scm]
search_parent_directories = true
local_scheme = "node-and-date"
version_scheme = "no-guess-dev"
fallback_version = "0.0.0"
